--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,2 @@
+<shared-menu></shared-menu>
 <router-outlet></router-outlet>
-
-
-<h1>{{title | slice: 8}}</h1>
-
-<p-button label=" ingresa Correo" icon="pi pi-check" iconPos="left" />
-<i class="pi pi-check" style="font-size: 2rem"></i>
-<p-button label="Click" icon="pi pi-check" iconPos="left"></p-button>
