--- a/src/app/products/pages/basics-page/basics-page.component.html
+++ b/src/app/products/pages/basics-page/basics-page.component.html
@@ -1,1 +1,119 @@
-<p>basics-page works!</p>
+<p-panel header="Piepes Basicos" class="p-1">
+
+    <p>Pipes incluidos en Angular - Usualmente en el common Module</p>
+</p-panel>
+
+
+<div class="grid">
+
+    <div class="col-12 md:col-4 xs:col-4">
+        <p-card header="uppercase">
+            {{nameLower | uppercase}}
+        </p-card>
+    </div>
+
+    <div class="col-12 md:col-4  xs:col-4">
+        <p-card header="lowecase">
+            {{nameUpper | lowercase}}
+        </p-card>
+    </div>
+    <div class="col-12 md:col-4 xs:col-4 ">
+        <p-card header="titlecase">
+            {{ fullNaeme | titlecase}}
+        </p-card>
+    </div>
+
+    <div class="col-12 md:col-6  ">
+        <p-card header="titlecase">
+            <ol>
+                <li>
+                    Fecha
+                </li>
+                <li>
+                    Fecha | date
+                </li>
+                <li>
+                    Fecha | date: 'short'
+                </li>
+                <li>
+                    Fecha | date: 'long'
+                </li>
+                <li>
+                    Fecha | date: 'MMMM '
+                </li>
+                <li>
+                    Fecha | date: 'MMMM DD, YYYY'
+                </li>
+            </ol>
+            <hr>
+            <ol>
+                <li>
+                    fecha | date: 'long':'GMT-6'
+                </li>
+                <li>
+                    fecha | date: 'long':'GMT-4'
+                </li>
+                <li>
+                    fecha | date: 'long':'': 'es-CL'
+                </li>
+                <li>
+                    fecha | date: 'long':'': 'fr-CA'
+                </li>
+                <li>
+                    fecha | date: 'long':'': 'es-US'
+                </li>
+            </ol>
+
+        </p-card>
+    </div>
+
+    <div class="col-12 md:col-6 ">
+        <p-card header="titlecase">
+            <ol>
+                <li>
+                    {{ customeDate}}
+                </li>
+                <li>
+                    {{ customeDate | date }}
+                </li>
+                <li>
+                    {{ customeDate | date: 'short'}}
+                </li>
+                <li>
+                    {{ customeDate | date: 'long'}}
+                </li>
+                <li>
+                    {{ customeDate | date: 'MMMM'}}
+                </li>
+                <li>
+                    {{ customeDate | date: 'MMMM dd, YYYY'}}
+                </li>
+
+
+            </ol>
+
+            <hr>
+            <ol>
+                <li>
+                    {{customeDate | date: 'long':'GMT-6'}}
+                </li>
+                <li>
+                    {{customeDate| date: 'long':'GMT-5' }}
+                </li>
+                <li>
+                    {{customeDate| date: 'long':'': 'es-CL' }}
+                </li>
+                <li>
+                    {{customeDate| date: 'long':'': 'fr-CA' }}
+                </li>
+                <li>
+                    {{customeDate| date: 'long':'': 'en-US' }}
+                </li>
+
+            </ol>
+
+
+        </p-card>
+    </div>
+
+</div>
