--- a/src/app/products/pages/numbers-page/numbers-page.component.html
+++ b/src/app/products/pages/numbers-page/numbers-page.component.html
@@ -1,1 +1,26 @@
-<p>numbers-page works!</p>
+<p-panel header="Piepes Basicos" class="p-1">
+
+    <p>Pipes incluidos en Angular - Usualmente en el common Module</p>
+</p-panel>
+
+
+<div class="grid">
+
+    <div class="col-12 md:col-4 ">
+        <p-card header="Ventas Netas" subheader="del presente año">
+            {{totalSells + 1235 | number: '1.2-2'}}
+        </p-card>
+    </div>
+    <div class="col-12 md:col-4 ">
+        <p-card header="Ventas Brutas" subheader="del presente año">
+            {{totalSells | currency:'':'symbol-narrow' }}
+        </p-card>
+    </div>
+
+    <div class="col-12 md:col-4 ">
+        <p-card header="Ganancias Porcentual" subheader="del presente año">
+            {{percent | percent }}
+        </p-card>
+    </div>
+
+</div>
